Fix horizontal scrolling in code highlight blocks

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -10,6 +10,7 @@ li > ul {
   margin-left: 10px;
   background-color: #f2f2f2;
   pre {
+    overflow-x: scroll;
     padding-left: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
